--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,3 +4,24 @@
 
 /* Homepage background: #404eed */
 
+@layer base {
+  @font-face {
+    font-family: GintoNord-Black;
+    src: url('../assets/fonts/GintoNord-Black.woff') format('woff');
+  }
+
+  @font-face {
+    font-family: GintoNord-Medium;
+    src: url('../assets/fonts/GintoNord-Medium.woff') format('woff');
+  }
+
+  @font-face {
+    font-family: Whitney-Book-Bas;
+    src: url('../assets/fonts/Whitney-Book-Bas.otf') format('opentype');
+  }
+}
+
+* {
+  @apply font-body
+}
+
