--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,21 +7,20 @@
 @layer base {
   @font-face {
     font-family: GintoNord-Black;
-    src: url('../assets/fonts/GintoNord-Black.woff') format('woff');
+    src: url("../assets/fonts/GintoNord-Black.woff") format("woff");
   }
 
   @font-face {
     font-family: GintoNord-Medium;
-    src: url('../assets/fonts/GintoNord-Medium.woff') format('woff');
+    src: url("../assets/fonts/GintoNord-Medium.woff") format("woff");
   }
 
   @font-face {
     font-family: Whitney-Book-Bas;
-    src: url('../assets/fonts/Whitney-Book-Bas.otf') format('opentype');
+    src: url("../assets/fonts/Whitney-Book-Bas.otf") format("opentype");
   }
 }
 
 * {
   @apply font-body;
 }
-
